--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<link href="css/main.min.css" rel="stylesheet" />
 
 		<!--Website tab tags-->
-		<title>WebStudio</title>
+		<title>Studio</title>
 	</head>
 	<body>
 		<div class="backdrop is-hidden" data-modal>
@@ -146,13 +146,7 @@
 					<li class="section-lorem__list-icons">
 						<div class="section-lorem__svg">
 							<svg class="section-lorem__icon">
-								<use
-									href="./images/icons.svg#antenna-1"
-									width="70"
-									height="70"
-									x="102"
-									y="25"
-								></use>
+								<use href="./images/icons.svg#antenna-1"></use>
 							</svg>
 						</div>
 						<h3 class="section-lorem__title">LOREM IPSUM</h3>
@@ -164,13 +158,7 @@
 					<li class="section-lorem__list-icons">
 						<div class="section-lorem__svg">
 							<svg class="section-lorem__icon">
-								<use
-									href="./images/icons.svg#clock-1"
-									width="70"
-									height="70"
-									x="101"
-									y="25"
-								></use>
+								<use href="./images/icons.svg#clock-1"></use>
 							</svg>
 						</div>
 						<h3 class="section-lorem__title">LOREM IPSUM</h3>
@@ -182,13 +170,7 @@
 					<li class="section-lorem__list-icons">
 						<div class="section-lorem__svg">
 							<svg class="section-lorem__icon">
-								<use
-									href="./images/icons.svg#diagram-1"
-									width="70"
-									height="70"
-									x="100"
-									y="33"
-								></use>
+								<use href="./images/icons.svg#diagram-1"></use>
 							</svg>
 						</div>
 						<h3 class="section-lorem__title">LOREM IPSUM</h3>
@@ -202,13 +184,7 @@
 					<li class="section-lorem__list-icons">
 						<div class="section-lorem__svg">
 							<svg class="section-lorem__icon">
-								<use
-									href="./images/icons.svg#astronaut-1"
-									width="70"
-									height="70"
-									x="100"
-									y="30"
-								></use>
+								<use href="./images/icons.svg#astronaut-1"></use>
 							</svg>
 						</div>
 						<h3 class="section-lorem__title">LOREM IPSUM</h3>
@@ -562,11 +538,15 @@
 							<svg class="section-clients__icon">
 								<use
 									href="./images/icons.svg#Logo"
+									<!--
 									width="100"
 									height="100"
 									x="20"
 									y="-7"
-								></use>
+									--
+								>
+									>
+								</use>
 							</svg>
 						</a>
 					</li>
@@ -575,11 +555,15 @@
 							<svg class="section-clients__icon">
 								<use
 									href="./images/icons.svg#Logo1"
+									<!--
 									width="100"
 									height="100"
 									x="20"
 									y="-7"
-								></use>
+									--
+								>
+									>
+								</use>
 							</svg>
 						</a>
 					</li>
@@ -588,11 +572,15 @@
 							<svg class="section-clients__icon">
 								<use
 									href="./images/icons.svg#Logo2"
+									<!--
 									width="100"
 									height="100"
 									x="20"
 									y="-7"
-								></use>
+									--
+								>
+									>
+								</use>
 							</svg>
 						</a>
 					</li>
@@ -603,11 +591,15 @@
 							<svg class="section-clients__icon">
 								<use
 									href="./images/icons.svg#Logo3"
+									<!--
 									width="100"
 									height="100"
 									x="20"
 									y="-7"
-								></use>
+									--
+								>
+									>
+								</use>
 							</svg>
 						</a>
 					</li>
@@ -616,11 +608,15 @@
 							<svg class="section-clients__icon">
 								<use
 									href="./images/icons.svg#Logo4"
+									<!--
 									width="100"
 									height="100"
 									x="20"
 									y="-7"
-								></use>
+									--
+								>
+									>
+								</use>
 							</svg>
 						</a>
 					</li>
@@ -629,11 +625,15 @@
 							<svg class="section-clients__icon">
 								<use
 									href="./images/icons.svg#Logo5"
+									<!--
 									width="100"
 									height="100"
 									x="20"
 									y="-7"
-								></use>
+									--
+								>
+									>
+								</use>
 							</svg>
 						</a>
 					</li>
